# linode-legacy-to-setuptools

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  legacy_to_techdocs.py  pyproject.toml
legacy_to_techdocs/: __init__.py  __main__.py  cli.py  openapi.py  shared.py  translation.py
legacy_to_techdocs/commands/: base.py
legacy_to_techdocs/commands/root/: __init__.py  bake.py  convert.py  replace.py
